%% Attenova — entity-relationship (core models)
%% Export PNG/SVG: https://mermaid.live — paste this file, then Actions → Export

erDiagram
  Organization ||--o{ Office : has
  Organization ||--o{ User : users
  Organization ||--o{ Employee : employees

  Office ||--o{ Shift : defines
  Office ||--o{ Employee : employs
  Office ||--o{ BiometricDevice : devices
  Office ||--o{ Attendance : attendances
  Office ||--o{ AttendanceRun : runs

  User }o--|| Organization : organization_fk
  User }o--o| Office : office_fk_optional

  Office }o--o{ User : managers_m2m

  Shift ||--o{ Employee : assigned
  Shift ||--o{ Attendance : used

  Employee }o--|| Organization : belongs
  Employee }o--|| Office : works_at
  Employee }o--o| Shift : shift_fk
  Employee }o--o| User : linked_user

  Employee ||--o{ Attendance : daily_records
  Attendance ||--o{ AttendancePunch : punches
  Attendance ||--o{ AttendanceRegularization : requests

  AttendanceRegularization }o--|| User : requested_by
  AttendanceRegularization }o--o| User : reviewed_by

  Notification }o--|| User : recipient
  Notification }o--o| User : created_by

  Organization {
    int id PK
    string name
    bool is_active
  }

  Office {
    int id PK
    int organization_id FK
    string name
    int num_biometric_devices
  }

  User {
    int id PK
    string email UK
    string role
    int organization_id FK
    int office_id FK
  }

  Shift {
    int id PK
    int office_id FK
    string name
    time start_time
    time end_time
    int grace_minutes
    bool is_default
  }

  Employee {
    int id PK
    int organization_id FK
    int office_id FK
    int shift_id FK
    int user_id FK
    string emp_code
    string name
    bool is_active
  }

  Attendance {
    int id PK
    int employee_id FK
    int office_id FK
    int shift_id FK
    date date
    string status
    string source
  }

  AttendancePunch {
    int id PK
    int attendance_id FK
    datetime punch_time
    string direction
  }

  AttendanceRegularization {
    int id PK
    int attendance_id FK
    int employee_id FK
    int requested_by_id FK
    int reviewed_by_id FK
    string status
  }

  AttendanceRun {
    int id PK
    int office_id FK
    datetime from_datetime
    datetime to_datetime
    string status
  }

  BiometricDevice {
    int id PK
    int office_id FK
    string device_id
  }

  BiometricLog {
    int id PK
    string emp_code
    datetime punch_time
    string device_id
  }

  DummyEsslBiometricAttendanceData {
    bigint DeviceLogId PK
    string UserId
    datetime LogDate
    string Direction
    string DeviceId
  }

  Notification {
    int id PK
    int recipient_id FK
    int created_by_id FK
    string notification_type
  }
